fix: prioritize external .cue files over embedded FLAC CUE sheets
When a .flac file has an embedded CUE and an external .cue file also
exists for the same audio, the parallel stream in updateChildren()
could process the embedded CUE first, consuming the base file from
bareFiles and causing the external .cue to log a spurious WARN.

Now external .cue files are processed first, and embedded .flac CUE
sheets are processed second. When an embedded CUE's base file was
already claimed by an external .cue, it is silently skipped at DEBUG
level instead of logging a WARN.